--- a/index.html
+++ b/index.html
@@ -30,37 +30,15 @@
          <div class="container">
             <div class="row">
                <div class="col-xs-12">
-                  <div id="search-box" class="collapse">
-                     <form action="index.html#">
-                        <input type="search" class="form-control" placeholder="What do you want to know?">
-                     </form>
-                  </div>
-               </div>
-            </div>
-            <div class="row">
-               <div class="col-xs-12">
                   <div class="navbar-header smoth">
                      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#mainmenu">
                      <span class="icon-bar"></span>
                      <span class="icon-bar"></span>
                      <span class="icon-bar"></span>
                      </button>
-                     <a class="navbar-brand" href="index.html#home-area"><img src="images/logo.png" alt></a>
+                     <a class="navbar-brand" href="index.html#home-area"><img class="logo_img" src="images/logos/logo_retangular-negativo250x27.png" alt></a>
                   </div>
                   <div class="collapse navbar-collapse navbar-right" id="mainmenu">
-                     <ul class="nav navbar-nav navbar-right help-menu">
-                        <li><a "https://preview.colorlib.com/theme/classic/href"><i class="icofont icofont-user-alt-4"></i></a></li>
-                        <li><a href="index.html#search-box" data-toggle="collapse"><i class="icofont icofont-search-alt-2"></i></a></li>
-                        <li class="select-cuntry">
-                           <select name="counter" id="counter">
-                              <option value="ENG">ENG</option>
-                              <option value="BEN">BEN</option>
-                              <option value="ARA">ARA</option>
-                              <option value="ARG">ARG</option>
-                              <option value="CHV">CHV</option>
-                           </select>
-                        </li>
-                     </ul>
                      <ul class="nav navbar-nav primary-menu">
                         <li class="active"><a href="index.html#home-area">Home</a></li>
                         <li><a href="index.html#service-area">Services</a></li>
